FA-8420 added native cryptocurrency blockchain as required
