# v2/api-validator/src/server/controllers/cryptocurrency-blockchain-map.ts
@@ -1,0 +1,73 @@
+import { Blockchain, CryptocurrencySymbol } from '../../client/generated';
+
+export const CRYPTOCURRENCY_SYMBOL_TO_BLOCKCHAINS: Record<CryptocurrencySymbol, Blockchain[]> = {
+  [CryptocurrencySymbol.ADA]: [Blockchain.CARDANO],
+  [CryptocurrencySymbol.ALGO]: [Blockchain.ALGORAND],
+  [CryptocurrencySymbol.ASTR]: [Blockchain.ASTAR],
+  [CryptocurrencySymbol.ATOM]: [Blockchain.COSMOS],
+  [CryptocurrencySymbol.AURORA]: [Blockchain.AURORA],
+  [CryptocurrencySymbol.AVAX]: [Blockchain.AVALANCHE],
+  [CryptocurrencySymbol.AXL]: [Blockchain.AXELAR],
+  [CryptocurrencySymbol.BCH]: [Blockchain.BITCOIN_CASH],
+  [CryptocurrencySymbol.BCHA]: [Blockchain.BITCOIN_CASH_ABC],
+  [CryptocurrencySymbol.BERA]: [Blockchain.BERACHAIN],
+  [CryptocurrencySymbol.BITKUB]: [Blockchain.BITKUB_CHAIN],
+  [CryptocurrencySymbol.BNB]: [Blockchain.BNB],
+  [CryptocurrencySymbol.BSV]: [Blockchain.BITCOIN_SV],
+  [CryptocurrencySymbol.BTC]: [Blockchain.BITCOIN],
+  [CryptocurrencySymbol.CANTO]: [Blockchain.CANTO],
+  [CryptocurrencySymbol.CELESTIA]: [Blockchain.CELESTIA],
+  [CryptocurrencySymbol.CELO]: [Blockchain.CELO],
+  [CryptocurrencySymbol.CHZ]: [Blockchain.CHILIZ_LEGACY_CHAIN],
+  [CryptocurrencySymbol.CHZ2]: [Blockchain.CHILIZ_CHAIN],
+  [CryptocurrencySymbol.CTXC]: [Blockchain.CORTEX],
+  [CryptocurrencySymbol.DASH]: [Blockchain.DASH],
+  [CryptocurrencySymbol.DOGE]: [Blockchain.DOGECOIN],
+  [CryptocurrencySymbol.DOT]: [Blockchain.POLKADOT],
+  [CryptocurrencySymbol.DYDX]: [Blockchain.DYDX],
+  [CryptocurrencySymbol.EOS]: [Blockchain.EOS],
+  [CryptocurrencySymbol.ETC]: [Blockchain.ETHEREUM_CLASSIC],
+  [CryptocurrencySymbol.ETH]: [
+    Blockchain.ETHEREUM,
+    Blockchain.ARBITRUM,
+    Blockchain.OPTIMISM,
+    Blockchain.BASE,
+  ],
+  [CryptocurrencySymbol.ETHW]: [Blockchain.ETHEREUM_PO_W],
+  [CryptocurrencySymbol.EVMOS]: [Blockchain.EVMOS],
+  [CryptocurrencySymbol.FLR]: [Blockchain.FLARE],
+  [CryptocurrencySymbol.FTM]: [Blockchain.FANTOM_OPERA],
+  [CryptocurrencySymbol.GLMR]: [Blockchain.MOONBEAM],
+  [CryptocurrencySymbol.HBAR]: [Blockchain.HEDERA],
+  [CryptocurrencySymbol.HT]: [Blockchain.HT_CHAIN],
+  [CryptocurrencySymbol.KAVA]: [Blockchain.KAVA],
+  [CryptocurrencySymbol.KSM]: [Blockchain.KUSAMA],
+  [CryptocurrencySymbol.FRAX]: [Blockchain.FRAXTAL],
+  [CryptocurrencySymbol.LTC]: [Blockchain.LITECOIN],
+  [CryptocurrencySymbol.LUNA]: [Blockchain.TERRA_CLASSIC],
+  [CryptocurrencySymbol.LUNA2]: [Blockchain.TERRA_2_0],
+  [CryptocurrencySymbol.MATIC]: [Blockchain.POLYGON_PO_S],
+  [CryptocurrencySymbol.MOVR]: [Blockchain.MOONRIVER],
+  [CryptocurrencySymbol.NEAR]: [Blockchain.NEAR_PROTOCOL],
+  [CryptocurrencySymbol.OAS]: [Blockchain.OASYS],
+  [CryptocurrencySymbol.OSMO]: [Blockchain.OSMOSIS],
+  [CryptocurrencySymbol.PALM]: [Blockchain.PALM],
+  [CryptocurrencySymbol.RON]: [Blockchain.RONIN],
+  [CryptocurrencySymbol.RSK]: [Blockchain.RSK],
+  [CryptocurrencySymbol.SMR]: [Blockchain.SHIMMER],
+  [CryptocurrencySymbol.SOL]: [Blockchain.SOLANA],
+  [CryptocurrencySymbol.SONGBIRD]: [Blockchain.SONGBIRD_CANARY_NETWORK],
+  [CryptocurrencySymbol.SXNETWORK]: [Blockchain.SX_NETWORK],
+  [CryptocurrencySymbol.TKX]: [Blockchain.TOKEN_EX],
+  [CryptocurrencySymbol.TRX]: [Blockchain.TRON],
+  [CryptocurrencySymbol.VLX]: [Blockchain.VELAS],
+  [CryptocurrencySymbol.WEMIX]: [Blockchain.WEMIX],
+  [CryptocurrencySymbol.XDB]: [Blockchain.XDB_CHAIN],
+  [CryptocurrencySymbol.XDC]: [Blockchain.XIN_FIN_NETWORK],
+  [CryptocurrencySymbol.XEC]: [Blockchain.E_CASH],
+  [CryptocurrencySymbol.XEM]: [Blockchain.NEM_NIS1],
+  [CryptocurrencySymbol.XLM]: [Blockchain.STELLAR],
+  [CryptocurrencySymbol.XRP]: [Blockchain.XRP],
+  [CryptocurrencySymbol.XTZ]: [Blockchain.TEZOS],
+  [CryptocurrencySymbol.ZEC]: [Blockchain.ZCASH],
+};
