# v2/openapi/fb-provider-api.yaml
@@ -1106,6 +1106,7 @@ components:
     NativeCryptocurrency:
       type: object
       required:
+        - blockchain
         - cryptocurrencySymbol
       properties:
         blockchain:
@@ -1244,13 +1245,11 @@ components:
       enum:
         - ADA
         - ALGO
-        - ARB
         - ASTR
         - ATOM
         - AURORA
         - AVAX
         - AXL
-        - BASE
         - BCH
         - BCHA
         - BERA
@@ -1288,7 +1287,6 @@ components:
         - MOVR
         - NEAR
         - OAS
-        - OPT
         - OSMO
         - PALM
         - RON
